--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ isort = "^5.12.0"
 python-jose = "^3.3.0"
 passlib = "^1.7.4"
 python-multipart = "^0.0.6"
+sqlalchemy = "^2"
+asyncpg = "^0.28"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.103.1"
